# xxzip

./: .gitignore  Cargo.toml  README.md  build.rs
src/: cli.rs  compress.rs  core.rs  error.rs  extract.rs  gui.rs  list.rs  logger.rs  main.rs  mod.rs  utils.rs
