[package]
name = "zip_tool"
version = "0.1.0"
edition = "2021"
description = "一个高效的Rust解压缩工具，支持GUI和命令行界面"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/xcc-d/xxzip.git"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
zip = "0.6"
walkdir = "2.3"
indicatif = "0.17"
memmap2 = "0.9"
chrono = "0.4"
rfd = "0.11"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
atty = "0.2"

[features]
default = ["gui"]
gui = ["dep:eframe"]

[dependencies.eframe]
version = "0.22"
optional = true

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[package.metadata.windows]
subsystem = "windows"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
